Add new backend for Citrix Sharefile #1543 - FIXME WIP
Functional but needs docs and testing

--- a/fstest/test_all/config.yaml
+++ b/fstest/test_all/config.yaml
@@ -128,5 +128,7 @@ backends:
    fastlist: false
  - backend:  "putio"
    remote:   "TestPutio:"
-   subdir:   false
+   fastlist: false
+ - backend:  "sharefile"
+   remote:   "TestSharefile:"
    fastlist: false
